# complete-api-codevoweb

./: Cargo.toml  docker-compose.no_api.yml
src/: config.rs  db.rs  dtos.rs  errors.rs  main.rs  models.rs
src/extractors/: auth.rs
src/scopes/: auth.rs  users.rs
src/utils/: mod.rs  passwords.rs  token.rs
